added disconnect api
